# copilot

./: .env.example  .gitignore  Cargo.toml  install.sh
.cargo/: config.toml
.github/scripts/: validate_skills.py
.github/workflows/: ci.yml  release.yml  skills.yml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  client.rs  decision.rs  error.rs  lib.rs  reasoning_log.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: builder.rs  error.rs  lib.rs  status.rs  submitter.rs  tip_accounts.rs
crates/cli/: Cargo.toml
crates/cli/src/: banner.rs  cli.rs  commands.rs  config.rs  main.rs  pipeline.rs
crates/fault/: Cargo.toml
crates/fault/src/: classify.rs  inject.rs  lib.rs  signals.rs
crates/geyser/: Cargo.toml
crates/geyser/src/: chain_state.rs  error.rs  lib.rs  source.rs
crates/leader/: Cargo.toml
crates/leader/src/: error.rs  lib.rs  schedule.rs  tracker.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: entry.rs  error.rs  lib.rs  logger.rs  tracker.rs
crates/tip-oracle/: Cargo.toml
crates/tip-oracle/src/: error.rs  jito_tips.rs  lib.rs  prio_fees.rs  stats.rs  suggestion.rs
skills/: README.md  SKILL_ROUTER.md
skills/diagnose/: SKILL.md
skills/diagnose/references/: failure-taxonomy.md  tip-strategy.md
skills/inject/: SKILL.md
skills/inject/references/: agent-reasoning.md  autonomous-retry.md
skills/logs/: SKILL.md
skills/logs/references/: interpreting-logs.md
skills/run/: SKILL.md
skills/run/references/: bundle-construction.md  lifecycle-tracking.md  tip-pricing.md
skills/setup/: SKILL.md
skills/setup/references/: connectivity.md  environment.md
skills/solana-internals/: SKILL.md
skills/solana-internals/references/: banking-stage-and-sealevel.md  blockhash-lifetime.md  commitment-and-finalization.md  fees-and-compute.md  jito-bundles.md  quic-and-swqos.md  transaction-pipeline.md
skills/watch/: SKILL.md
skills/watch/references/: leader-scheduling.md  reading-the-feed.md
web/: index.html  script.js  style.css  vercel.json
