[workspace]
resolver = "2"
members = [
    "crates/geyser",
    "crates/leader",
    "crates/tip-oracle",
    "crates/bundle",
    "crates/lifecycle",
    "crates/fault",
    "crates/agent",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Dav <dav@asklemma.xyz>"]
repository = "https://github.com/replicolabs/copilot"
homepage = "https://copilot.asklemma.xyz"

[workspace.dependencies]
geyser = { path = "crates/geyser" }
leader = { path = "crates/leader" }
tip-oracle = { path = "crates/tip-oracle" }
bundle = { path = "crates/bundle" }
lifecycle = { path = "crates/lifecycle" }
fault = { path = "crates/fault" }
agent = { path = "crates/agent" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
yellowstone-grpc-client = "13"
yellowstone-grpc-proto = "12"
tonic = { version = "0.14", default-features = false, features = [
    "transport",
    "tls-native-roots",
    "tls-ring",
] }
solana-pubkey = "4.1"
solana-hash = "4.2"
solana-rpc-client = "4"
solana-rpc-client-api = "4"
solana-signature = "3"
solana-keypair = "3"
solana-signer = "3"
solana-instruction = "3"
solana-message = "3"
solana-transaction = { version = "3", features = ["bincode"] }
solana-system-interface = { version = "3", features = ["bincode"] }
solana-compute-budget-interface = "3"
jito-sdk-rust = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bincode = "1.3"
rand = "0.8"
anyhow = "1"
arc-swap = "1"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = false
codegen-units = 1
panic = "abort"