[package]
name = "cli"
description = "The Copilot command-line orchestrator: monitor, submit, track, and the autonomous-retry demo."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "copilot"
path = "src/main.rs"

[dependencies]
geyser = { workspace = true }
leader = { workspace = true }
tip-oracle = { workspace = true }
bundle = { workspace = true }
lifecycle = { workspace = true }
fault = { workspace = true }
agent = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
solana-rpc-client = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-hash = { workspace = true }
solana-pubkey = { workspace = true }