[package]
name = "fault"
description = "Failure classification and deterministic fault injection for the retry agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
solana-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }